# omnipanel

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRD.md  package-lock.json  package.json  tsconfig.json
agent/: agent-runtime.ts  config.ts  index.ts  package.json
crates/omnipanel-assistant/: Cargo.toml
crates/omnipanel-assistant/src/: error.rs  lib.rs  notify.rs  oss.rs  push.rs  sanitize.rs  sts.rs  types.rs
crates/omnipanel-assistant/src/collect/: database.rs  docker.rs  files.rs  knowledge.rs  mod.rs  protocol.rs  server.rs  tasks.rs  terminal.rs
crates/omnipanel-exec/: Cargo.toml
crates/omnipanel-exec/src/: lib.rs  shell.rs
crates/omnipanel-mcp/: Cargo.toml
crates/omnipanel-mcp/src/: builtin.rs  client.rs  embedding.rs  exposed_tools.rs  lib.rs  manager.rs  omni_module.rs  types.rs
crates/omnipanel-mcp/src/registry/: database_tools.rs  docker_tools.rs  files_tools.rs  mod.rs  native.rs  omnimcp_execute.rs  ssh_tools.rs  terminal_tools.rs  web_tools.rs
crates/omnipanel-mcp/src/registry/web/: common.rs  mod.rs
crates/omnipanel-mcp/src/registry/web/fetch/: jina.rs  local.rs  mod.rs
crates/omnipanel-mcp/src/registry/web/fetch/extract/: format.rs  mod.rs  site_rules.rs  trafilatura_ext.rs
crates/omnipanel-mcp/src/registry/web/search/: ddg.rs  exa.rs  jina.rs  mod.rs  zhihu.rs
design/: database.html  database.html.artifact.json  docker.html  docker.html.artifact.json  file-manager.html  file-manager.html.artifact.json  index.html  index.html.artifact.json  knowledge.html  knowledge.html.artifact.json  protocol.html  protocol.html.artifact.json  server.html  server.html.artifact.json  settings.html  settings.html.artifact.json  ssh.html  ssh.html.artifact.json  tasks.html  tasks.html.artifact.json  terminal.html  terminal.html.artifact.json  workflow.html  workflow.html.artifact.json
docs/: ARCHITECTURE.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: check-aliyun-oss.mjs  check-ipc-command-registry.mjs  gen-ipc-bindings.mjs  publish-updater-to-aliyun-oss.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
website/: README.md  (+6 more)
(+1541 files in other folders)
