[package]
name = "omnipanel-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnipanel-error = { path = "../omnipanel-error" }
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true }
