[package]
name = "omnipanel-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
omnipanel-error = { path = "../omnipanel-error" }
omnipanel-store = { path = "../omnipanel-store" }
omnipanel-ai = { path = "../omnipanel-ai" }
omnipanel-db = { path = "../omnipanel-db" }
omnipanel-exec = { path = "../omnipanel-exec" }
sqlx = { workspace = true }
async-trait = "0.1"
specta.workspace = true
rmcp = { version = "1.7.0", features = [
    "server",
    "client",
    "macros",
    "schemars",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
reqwest = { workspace = true, features = ["json"] }
url = "2"
html2md = "0.2"
rs-trafilatura = "0.2.2"
scraper = "0.27.0"
